smaller chunks and better kube deployment