@@ -17,4 +17,10 @@ cd $MINECRAFT_ROOT
 
 LOG_CONF=-Dlog4j.configurationFile=log4j2.xml
 
-ruby $MAVENCRAFT_WRAPPER java ${LOG_CONF} -XX:UseSSE=2 -Xmx$RAM -Xms$RAM -XX:+UseConcMarkSweepGC -XX:ParallelGCThreads=32 -XX:+AggressiveOpts -XX:+CMSClassUnloadingEnabled -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=20 -server -jar $MINECRAFT_ROOT/minecraft.jar --port $MINECRAFT_PORT nogui
+java --version
+
+JVM_ARGS="-mx${RAM} -Xmx${RAM} -Xms${RAM} -XX:MaxGCPauseMillis=5"
+
+#-XX:InitiatingHeapOccupancyPercent=10 -XX:AllocatePrefetchStyle=1 -XX:+UseSuperWord -XX:+OptimizeFill -XX:LoopUnrollMin=4 -XX:LoopMaxUnroll=16 -XX:+UseLoopPredicate -XX:+RangeCheckElimination -XX:+CMSCleanOnEnter -XX:+EliminateLocks -XX:+DoEscapeAnalysis -XX:+TieredCompilation -XX:+UseCodeCacheFlushing -XX:+CMSScavengeBeforeRemark -XX:+ScavengeBeforeFullGC -XX:+AlwaysPreTouch -XX:+UnlockExperimentalVMOptions -XX:G1HeapWastePercent=10 -XX:G1MaxNewSizePercent=10 -XX:G1HeapRegionSize=32M -XX:G1NewSizePercent=10 -XX:MaxGCPauseMillis=100 -XX:+OptimizeStringConcat -XX:+UseNUMA -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:SurvivorRatio=2 -XX:+DisableExplicitGC"
+
+ruby $MAVENCRAFT_WRAPPER java ${LOG_CONF} ${JVM_ARGS} -server -jar $MINECRAFT_ROOT/minecraft.jar --port $MINECRAFT_PORT nogui
